--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,11 @@
-<h1>Table Top Warriors</h1>
+<div>
+    <header>
+        <image src="../public/images/TTW-Header-Logo.png" alt="Table Top Warriors Logo 2" href="/" />
+        <button>Sign Up</button>
+    </header>
+</div>
+
+<image src="../public/images/Table-Top-Warriors-Logo.png" alt="Table Top Warriors Logo" />
 
 <form>
     <div>
