--- a/views/sign-up.handlebars
+++ b/views/sign-up.handlebars
@@ -7,6 +7,11 @@
 
 <form>
     <div>
+        <label>Email:</label>
+        <input />
+    </div>
+
+    <div>
         <label>Username:</label>
         <input />
     </div>
@@ -16,5 +21,10 @@
         <input />
     </div>
 
-    <button>Log In</button>
+    <div>
+        <label>Confirm Password:</label>
+        <input />
+    </div>
+
+    <button>Sign Up</button>
 </form>
