created basic home and dashboard routes. Also edited handlebars pages.

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,7 +8,23 @@
 </head>
 
 <body>
-	{{{ body }}}
+	<div>
+		<header>
+			<h1>
+				<a href="/">Table Top Warriors</a>
+				<image src="/images/TTW-Header-Logo.png" alt="Table Top Warriors Logo 2" href="/">
+			</h1>
+			<nav>
+				{{!-- IF STATEMENT FOR DISPLAYING LOGIN OR LOGOUT BUTTON WILL GO HERE --}}
+			</nav>
+		</header>
+		<main>
+			{{{ body }}}
+		</main>
+		<footer>
+			Thanks for visiting!
+		</footer>
+	</div>
 </body>
 
 </html>
