--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,9 +1,4 @@
-<header>
-    <image src="../public/images/TTW-Header-Logo.png" alt="Table Top Warriors Logo 2" href="/" />
-    <button>Sign Up</button>
-</header>
-
-<image src="../public/images/Table-Top-Warriors-Logo.png" alt="Table Top Warriors Logo" />
+<image src="/images/Table-Top-Warriors-Logo.png" alt="Table Top Warriors Logo" />
 
 <form>
     <div>
