--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -53,18 +53,17 @@ body {
 
 .login-form {
     background-color: var(--quinary-color);
-    border: 3px solid var(--tertiary-color);
+    border: 4px solid var(--tertiary-color);
     border-radius: 8px;
     align-items: center;
-    padding: 20px 20px 20px 20px;
-    margin: 50px;
+    padding: 48px 40px 48px 20px;
 }
 
 .login-form label {
     display: inline-block;
-    width: 150px;
     text-align: center;
-    padding: 10px;
+    width: 136px;
+    padding-bottom: 30px;
 }
 
 .login-form button {
@@ -75,6 +74,9 @@ body {
     border-radius: 8px;
     padding: 5px;
     opacity: 0.6;
+    text-align: center;
+    display: block;
+    margin: 0 auto;
 }
 
 .login-form button:hover {
@@ -83,15 +85,33 @@ body {
 
 .signup-form {
     background-color: var(--quinary-color);
-    border: 3px solid var(--tertiary-color);
+    border: 4px solid var(--tertiary-color);
     border-radius: 8px;
     align-items: center;
-    padding: 20px 20px 20px 20px;
+    padding: 20px 40px 20px 20px;
 }
 
 .signup-form label {
     display: inline-block;
-    width: 150px;
     text-align: center;
-    padding: 10px;
+    width: 136px;
+    padding-bottom: 20px;
+}
+
+
+.signup-form button {
+    color: var(--quinary-color);
+    background-color: var(--primary-color);
+    font-size: 16px;
+    border: 2px solid var(--primary-color);
+    border-radius: 8px;
+    padding: 5px;
+    opacity: 0.6;
+    text-align: center;
+    display: block;
+    margin: 0 auto;
+}
+
+.signup-form button:hover {
+    opacity: 1;
 }
