--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,20 +1,51 @@
-<header>
-    <image src="../public/images/TTW-Header-Logo.png" alt="Table Top Warriors Logo 2" href="/" />
-    <button>Sign Up</button>
-</header>
-
-<image src="../public/images/Table-Top-Warriors-Logo.png" alt="Table Top Warriors Logo" />
-
-<form>
-    <div>
-        <label>Username:</label>
-        <input />
+<div id="header">
+    <div id="header-logo">
+        <a href="/">
+            <image src="../images/TTW-Header-Logo.png" alt="Table Top Warriors Logo 2" />
+        </a>
     </div>
+</div>
+    
+<div>
+    <image src="../images/Table-Top-Warriors-Logo.png" alt="TTW Logo" id="main-logo" />
+</div>
+    
+<section class="forms">
+    <form class="login-form">
+        <div>
+            <label>Username:</label>
+            <input />
+        </div>
+        
+        <div id="login-bottom">
+            <label>Password:</label>
+            <input />            
+        </div>
+        
+        <button class="login-btn">Log In</button>
+    </form>
 
-    <div>
-        <label>Password:</label>
-        <input />
-    </div>
-
-    <button>Log In</button>
-</form>
+    <form class="signup-form">
+        <div>
+            <label>Email:</label>
+            <input />
+        </div>
+            
+        <div>
+            <label>Username:</label>
+            <input />
+        </div>
+            
+        <div>
+            <label>Password:</label>
+            <input />
+        </div>
+            
+        <div id="signup-bottom">
+            <label>Confirm Password:</label>
+            <input />
+        </div>
+            
+        <button class="signup-btn">Sign Up</button>
+    </form>
+</section>
