--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,13 +1,13 @@
 <div id="header">
     <div id="header-logo">
         <a href="/">
-            <image src="../images/TTW-Header-Logo.png" alt="Table Top Warriors Logo 2" />
+            <image src="/images/TTW-Header-Logo.png" alt="Table Top Warriors Logo 2" />
         </a>
     </div>
 </div>
     
 <div>
-    <image src="../images/Table-Top-Warriors-Logo.png" alt="TTW Logo" id="main-logo" />
+    <image src="/images/Table-Top-Warriors-Logo.png" alt="TTW Logo" id="main-logo" />
 </div>
     
 <section class="forms">
