--- a/views/deck-edit.handlebars
+++ b/views/deck-edit.handlebars
@@ -1,5 +1,5 @@
 <header>
-    <image src="../public/images/TTW-Header-Logo.png" alt="Table Top Warriors Logo 2" href="/" />
+    <image src="/public/images/TTW-Header-Logo.png" alt="Table Top Warriors Logo 2" href="/" />
 </header>
 
 <div>
