--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,15 +1,36 @@
 <image src="/images/Table-Top-Warriors-Logo.png" alt="Table Top Warriors Logo" />
 
-<form>
+<form class="login-form">
     <div>
-        <label>Username:</label>
-        <input />
+        <label for="email-login">Email:</label>
+        <input type="text" id="email-login"/>
     </div>
-
     <div>
-        <label>Password:</label>
-        <input />
+        <label for="password-login">Password:</label>
+        <input type="password" id="password-login"/>
     </div>
-
-    <button>Log In</button>
+    <div>
+        <button type="submit">Log In</button>
+    </div>
 </form>
+
+<form class="signup-form">
+    <div>
+        <label for="username-signup">Username:</label>
+        <input type="text" id="username-signup"/>
+    </div>
+
+    <div>
+        <label for="email-signup">Email:</label>
+        <input type="text" id="email-signup"/>
+    </div>
+
+    <div>
+        <label for="password-signup">Password:</label>
+        <input type="password" id="password-signup"/>
+    </div>
+
+    <button type="submit">Sign Up</button>
+</form>
+
+<script src="/javascript/login.js"></script>
