--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -4,12 +4,17 @@
             <image src="/images/TTW-Header-Logo.png" alt="Table Top Warriors Logo 2" />
         </a>
     </div>
-    <div id="login-signup-btn">
-        <button>Log In/Sign Up</button>
-    </div>
+       
+    <button id="login-signup-btn">Log In / Sign Up</button>
 </div>
+    
+<section class="home-search">
+    <input type="text" placeholder="Search Card Name Here" id="search-box"/>
+    <button type="submit" id="home-search-btn">Search</button>
+</section>
 
-<section>
-    <input type="text" placeholder="Search.." />
-    <button type="submit">Submit</button>
+<section class="home-game-logos">
+    <image src="/images/Pokemon-Logo.png" alt="Pokemon Logo" id="home-pokemon" />
+    <image src="/images/Magic-The-Gathering-Logo.png" alt="MTG Logo" id="home-mtg" />
+    <image src="/images/Yu-Gi-Oh!-Logo.png" alt="Yu-Gi-Oh! Logo" id="home-yugioh" />
 </section>
