--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -199,3 +199,37 @@ body {
     height: 20%;
     width: 20%;
 }
+
+.user-btns {
+    display: flex;
+    justify-content: space-evenly;
+    flex-grow: 1;
+    align-items: center;
+    align-content: center;
+}
+
+#create-btn {
+    font-size: 28px;
+    padding: 10px 18px 10px 18px;
+    border: 2px solid var(--quinary-color);
+    background-color: var(--quinary-color);
+    border-radius: 8px;
+    margin: 300px 0 200px 0;
+}
+
+#create-btn:hover {
+    background-color: var(--tertiary-color);
+}
+
+#collection-btn {
+    font-size: 28px;
+    padding: 10px;
+    border: 2px solid var(--quinary-color);
+    background-color: var(--quinary-color);
+    border-radius: 8px;
+    margin: 300px 0 200px 0;
+}
+
+#collection-btn:hover {
+    background-color: var(--tertiary-color);
+}
