added poke and magic apis

--- a/views/deck-edit.handlebars
+++ b/views/deck-edit.handlebars
@@ -10,7 +10,7 @@
 
 <div>
     <label>Card Search:</label>
-    <input />
+    <input name="card-name"/>
     <button>Enter</button>
     <h4>Type a word, phrase, or full card name and hit enter to search</h4>
 </div>
