created user-home.js in js folder to handle the button clicks to route to correct pages

--- a/views/user-home.handlebars
+++ b/views/user-home.handlebars
@@ -1,4 +1,6 @@
 <div>
-    <button>Create A Deck</button>
-    <button>Your Deck Collection</button>
+    <button id='create-a-deck'>Create A Deck</button>
+    <button id='view-deck-collection'>Your Deck Collection</button>
 </div>
+
+<script src="/javascript/user-home.js"></script>
