created new partials. new deck-creation page

--- a/views/deck-creation.handlebars
+++ b/views/deck-creation.handlebars
@@ -1,8 +1,8 @@
 <div>
     <button>Game:</button>
     <div>
-        <a href="#">Yu-Gi-Oh</a>
-        <a href="#">Pokémon</a>
+        <a href="#">YuGiOh!</a>
+        <a href="#">Pokemon</a>
         <a href="#">Magic: The Gathering</a>
     </div>
 </div>
