--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,83 +1,40 @@
 <image src="/images/Table-Top-Warriors-Logo.png" alt="Table Top Warriors Logo" />
 
-<form class="login-form">
-    <div>
-        <label for="email-login">Email:</label>
-        <input type="text" id="email-login"/>
-    </div>
-    <div>
-        <label for="password-login">Password:</label>
-        <input type="password" id="password-login"/>
-    </div>
-    <div>
-        <button type="submit">Log In</button>
-    </div>
-</form>
-
-<form class="signup-form">
-    <div>
-        <label for="username-signup">Username:</label>
-        <input type="text" id="username-signup"/>
-    </div>
-
-    <div>
-        <label for="email-signup">Email:</label>
-        <input type="text" id="email-signup"/>
-    </div>
-</div>
-    
-<div>
-    <image src="/images/Table-Top-Warriors-Logo.png" alt="TTW Logo" id="main-logo" />
-</div>
-    
 <section class="forms">
     <form class="login-form">
         <div>
-            <label>Username:</label>
-            <input />
+            <label for="email-login">Email:</label>
+            <input type="text" id="email-login"/>
         </div>
-        
-        <div id="login-bottom">
-            <label>Password:</label>
-            <input />            
+        <div>
+            <label for="password-login">Password:</label>
+            <input type="password" id="password-login"/>
         </div>
-        
-        <button class="login-btn">Log In</button>
+        <div>
+            <button type="submit" class="login-btn">Log In</button>
+        </div>
     </form>
 
-<<<<<<< HEAD
-    <div>
-        <label for="password-signup">Password:</label>
-        <input type="password" id="password-signup"/>
-    </div>
-
-    <button type="submit">Sign Up</button>
-</form>
-
-<script src="/javascript/login.js"></script>
-=======
     <form class="signup-form">
         <div>
-            <label>Email:</label>
-            <input />
+            <label for="username-signup">Username:</label>
+            <input type="text" id="username-signup"/>
         </div>
-            
+
         <div>
-            <label>Username:</label>
-            <input />
+            <label for="email-signup">Email:</label>
+            <input type="text" id="email-signup"/>
         </div>
-            
+
         <div>
-            <label>Password:</label>
-            <input />
+            <label for="password-signup">Password:</label>
+            <input type="password" id="password-signup"/>
         </div>
-            
-        <div id="signup-bottom">
-            <label>Confirm Password:</label>
-            <input />
+
+        <div>
+            <button type="submit" class="signup-btn">Sign Up</button>
         </div>
-            
-        <button class="signup-btn">Sign Up</button>
     </form>
 </section>
->>>>>>> feature/css
+
+<script src="/javascript/login.js"></script>
