edited id of buttons to allow page to redirect correctly

--- a/views/user-home.handlebars
+++ b/views/user-home.handlebars
@@ -7,8 +7,8 @@
 </div>
 
 <div class="user-btns">
-    <button id="create-btn">Create A Deck</button>
-    <button id="collection-btn">Deck Collection</button>
+    <button id="create-a-deck">Create A Deck</button>
+    <button id="view-deck-collection">Deck Collection</button>
 </div>
 
 <section class="home-game-logos">
