--- a/views/partials/card-info.handlebars
+++ b/views/partials/card-info.handlebars
@@ -1,41 +1,98 @@
 <div>
     <section>
-        <div>
-            {{game}}
-            {{deck.deck_name}}
-            {{name}}
+        <div class="card-name">
+            Name: {{name}}
+        </div>
+        <div class="card-stats">
             {{#if magic}}
-                {{magic.colorsMagic}}
-                {{magic.colorIdentityMagic}}
-                {{magic.manaCostMagic}}
-                {{magic.cmcMagic}}
-                {{magic.typeMagic}}
-                {{magic.textMagic}}
-            {{else if yugis}}
-                {{yugis.levelYugi}}
-                {{yugis.attributeYugi}}
-                {{yugis.raceYugi}}
-                {{yugis.typeYugi}}
-                {{yugis.descYugi}}
-                {{yugis.atkYug}}
-                {{yugis.defYugi}}
-            {{else}}
-                {{pokes.hpPoke}}
-                {{pokes.supertypePoke}}
-                {{pokes.typesPoke}}
-                {{pokes.subtypesPoke}}
-                {{pokes.evolvesToPoke}}
-                {{pokes.abilitiesPoke.name}}
-                {{pokes.abilitiesPoke.text}}
-                {{pokes.abilitiesPoke.type}}
-                {{pokes.attacksPoke.name}}
-                {{pokes.attacksPoke.cost}}
-                {{pokes.attacksPoke.convertedEnergyCost}}
-                {{pokes.attacksPoke.damage}}
-                {{pokes.attacksPoke.text}}
-                {{pokes.weaknessesPoke.type}}
-                {{pokes.weaknessesPoke.value}}
-                {{pokes.retreatCostPoke}}
+                <div>
+                    Type: {{magic.0.typeMagic}}
+                </div>
+                <div>
+                    Description: {{magic.0.textMagic}}
+                </div>
+                <div>
+                    Color(s): {{magic.0.colorsMagic}}, {{magic.0.colorIdentityMagic}}
+                </div>
+                <div>
+                    Mana Cost: {{magic.0.manaCostMagic}} 
+                </div>
+                <div>
+                    Converted Mana Cost: {{magic.0.cmcMagic}}
+                </div>
+                ============
+            {{/if}}
+            {{#if yugis}}
+                <div>
+                    Attack: {{yugis.0.atkYugi}}
+                </div>
+                <div>
+                    Defense: {{yugis.0.defYugi}}
+                </div>
+                <div>
+                    Level: {{yugis.0.levelYugi}}
+                </div>
+                <div>
+                    Attribute: {{yugis.0.attributeYugi}}
+                </div>
+                <div>
+                    Race: {{yugis.0.raceYugi}}
+                </div>
+                <div>
+                    Type: {{yugis.0.typeYugi}}
+                </div>
+                <div>
+                    Description: {{yugis.0.descYugi}}
+                </div>
+                ============
+            {{/if}}
+            {{#if pokes}}
+                <div>
+                    HP: {{pokes.0.hpPoke}} 
+                </div>
+                <div>
+                    Supertype: {{pokes.0.supertypePoke}} 
+                </div>
+                <div>
+                    Type(s): {{pokes.0.typesPoke}}
+                </div>
+                <div>
+                    Subtype(s): {{pokes.0.subtypesPoke}}
+                </div>
+                <div>
+                    Evolves to: {{pokes.0.evolvesToPoke}}
+                </div>
+                <div>
+                    Ability name(s): {{pokes.0.abilitiesPoke.0.name}}
+                </div>
+                <div>
+                    Ability text(s): {{pokes.0.abilitiesPoke.0.text}}
+                </div>
+                <div>
+                    Ability type(s): {{pokes.0.abilitiesPoke.0.type}}
+                </div>
+                <div>
+                    Attack name(s): {{pokes.0.attacksPoke.0.name}}
+                </div>
+                <div>
+                    Attack cost(s): {{pokes.0.attacksPoke.0.cost}}
+                </div>
+                <div>
+                    Attack converted energy cost(s): {{pokes.0.attacksPoke.0.convertedEnergyCost}}
+                </div>
+                <div>
+                    Attack damage(s): {{pokes.0.attacksPoke.0.damage}}
+                </div>
+                <div>
+                    Attack text(s): {{pokes.0.attacksPoke.0.text}}
+                </div>
+                <div>
+                    Weaknesses: {{pokes.0.weaknessesPoke.0.type}} {{pokes.0.weaknessesPoke.0.value}}
+                </div>
+                <div>
+                    Retreat cost: {{pokes.0.retreatCostPoke}}
+                </div>
+                ============
             {{/if}}
         </div>
     </section>
