--- a/views/partials/deck-info.handlebars
+++ b/views/partials/deck-info.handlebars
@@ -1,10 +1,9 @@
 <div>
-
-    <section>
-        <div>
-            <h4>Game: {{game}}</h4>
-            <h4>Deck Name: {{deck_name}}</h4>
-        </div>
-    </section>
-
+    <!-- <image src="../images/Pokemon-Logo.png" alt="Game Logo" id="deck-logo" /> -->
+    <!-- <image src="../images/Yu-Gi-Oh!-Logo.png" alt="Game Logo" id="deck-logo" /> -->
+    <!-- <image src="../images/Magic-The-Gathering-Logo.png" alt="Game Logo" id="deck-logo" /> -->
+    {{game}}
+</div>
+<div id="deck-name">
+    <h4>{{deck_name}}</h4>
 </div>
