--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -93,6 +93,7 @@ body {
 .login-form {
     background-color: var(--quinary-color);
     border: 4px solid var(--tertiary-color);
+    box-shadow: 7px 7px 12px;
     border-radius: 8px;
     align-items: center;
     padding: 48px 40px 48px 20px;
@@ -131,6 +132,7 @@ body {
 .signup-form {
     background-color: var(--quinary-color);
     border: 4px solid var(--tertiary-color);
+    box-shadow: 7px 7px 12px;
     border-radius: 8px;
     align-items: center;
     padding: 39px 40px 39px 20px;
@@ -176,6 +178,7 @@ body {
     margin: 150px;
     padding: 40px;
     border: 4px solid var(--quaternary-color);
+    box-shadow: 7px 7px 12px;
     border-radius: 15px;
     background-color: var(--tertiary-color);
 }
@@ -308,4 +311,167 @@ body {
 
 #create-deck-btn:hover {
     opacity: 1;
+}
+
+#dc {
+    color: var(--quinary-color);
+    font-size: 50px;
+    font-weight: bold;
+    /* -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: var(--quinary-color); */
+    display: flex;
+    justify-content: space-evenly;
+    flex-grow: 1;
+    align-items: center;
+    align-content: center;
+    margin: 50px;
+}
+
+#decks {
+    color: var(--quaternary-color);
+    font-size: 32px;
+    font-weight: 900;
+    -webkit-text-stroke-width: 0.75px;
+    -webkit-text-stroke-color: var(--quinary-color);
+    margin: 20px;
+}
+
+.collection {
+    display: flex;
+    flex-grow: 1;
+    align-items: center;
+    align-content: center;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    width: 65%;
+}
+
+.deck {
+    display: flex;
+    justify-content: space-evenly;
+    flex-grow: 1;
+    align-items: center;
+    border: 4px solid var(--tertiary-color);
+    border-radius: 8px;
+    box-shadow: 7px 7px 12px;
+    background-color: var(--quinary-color);
+    height: 150px;
+}
+
+#deck-logo {
+    height: 100px;
+}
+
+#deck-name {
+    font-size: 24px;
+}
+
+#viewedit-btn {
+    margin: 20px auto;
+    margin-bottom: 5px;
+    color: var(--quinary-color);
+    background-color: var(--primary-color);
+    font-size: 16px;
+    border: 2px solid var(--primary-color);
+    border-radius: 8px;
+    padding: 8px;
+    opacity: 0.6;
+    text-align: center;
+    display: block;
+}
+
+#viewedit-btn:hover {
+    opacity: 1;
+}
+
+#delete-deck-btn {
+    margin: 20px auto;
+    margin-bottom: 5px;
+    color: var(--quinary-color);
+    background-color: var(--primary-color);
+    font-size: 16px;
+    border: 2px solid var(--primary-color);
+    border-radius: 8px;
+    padding: 8px;
+    opacity: 0.6;
+    text-align: center;
+    display: block;
+}
+
+#delete-deck-btn:hover {
+    opacity: 1;
+}
+
+.edit-screen {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 40px;
+    width: 80%;
+    color: var(--quinary-color);
+}
+
+.edit-screen div {
+    margin: 25px;
+    font-size: 28px;
+    width: 100%;
+}
+
+.edit-screen div h4 {
+    font-size: 15px;
+    padding-bottom: 5px;
+}
+
+.edit-screen div h2 {
+    font-size: 28px;
+}
+
+.edit-screen div input {
+    margin-left: 5px;
+    width: 45%;
+    height: 28px;
+    font-size: 18px;
+    box-shadow: 3px 3px 3px;
+}
+
+.edit-screen div button {
+    margin-left: 10px;
+    padding: 10px;
+    font-size: 18px;
+    border: 2px solid var(--quinary-color);
+    background-color: var(--quinary-color);
+    border-radius: 8px;
+}
+
+.edit-screen div button:hover {
+    background-color: var(--tertiary-color);
+    color: var(--quinary-color);
+}
+
+.edit-screen div textarea {
+    height: 400px;
+    width: 45%;
+    font-size: 18px;
+    margin-top: 15px;
+    resize: none;
+    box-shadow: 5px 5px 10px;
+}
+
+.edit-screen button {
+    padding: 10px;
+    font-size: 18px;
+    border: 2px solid var(--quinary-color);
+    background-color: var(--quinary-color);
+    border-radius: 8px;
+}
+
+.edit-screen button:hover {
+    background-color: var(--tertiary-color);
+    color: var(--quinary-color);
 }
