--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,4 +1,4 @@
-<div id="header">
+{{!-- <div id="header">
     <div id="header-logo">
         <a href="/">
             <image src="/images/TTW-Header-Logo.png" alt="Table Top Warriors Logo 2" />
@@ -6,7 +6,7 @@
     </div>
        
     <button id="login-signup-btn">Log In / Sign Up</button>
-</div>
+</div> --}}
     
 <section class="home-search">
     <input type="text" placeholder="Search Card Name Here" id="search-box"/>
