--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,8 +17,8 @@
 				</a>
 			</div>
 			{{#if loggedIn}}
-			<a id="login-signup-btn" href="/dashboard">Dashboard</a>
-			<a id="login-signup-btn" href="/" id="logout">Logout</a>
+			<a href="/dashboard">Dashboard</a>
+			<a href="/" id="logout">Logout</a>
 			{{else}}
 			<a href="/login" id="login-signup-btn">Log In / Sign Up</a>
 			{{/if}}
