added look based on which game your deck is, it will show the logo in the collection page

--- a/views/partials/deck-info.handlebars
+++ b/views/partials/deck-info.handlebars
@@ -1,10 +1,10 @@
-<div>
+<section>
+    <div>
 
-    <section>
-        <div>
-            <h4>Game: {{game}}</h4>
-            <h4>Deck Name: {{deck_name}}</h4>
-        </div>
-    </section>
+        <span class="game-span">{{{game}}}</span>
+        <h4>Deck Name: {{deck_name}}</h4>
 
-</div>
+    </div>
+</section>
+
+<script src="/javascript/deck-info.js"></script>
