--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -8,10 +8,10 @@
     <button id="login-signup-btn">Log In / Sign Up</button>
 </div> --}}
     
-<form class="home-search">
+<section class="home-search">
     <input type="text" placeholder="Search Card Name Here" id="search-box" name="card-name"/>
     <button type="submit" id="home-search-btn">Search</button>
-</form>
+</section>
 <div id='cardbox'>
     <img src='' id="card-pic" />
 </div>
