--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,5 +1,5 @@
-<section class="home-search">
-    <input type="text" placeholder="Search Card Name Here" id="search-box"/>
+<form class="home-search">
+    <input type="text" placeholder="Search Card Name Here" id="search-box" name="card-name" />
     <button type="submit" id="home-search-btn">Search</button>
 </form>
 <div id='cardbox'>
