--- a/views/partials/card-info.handlebars
+++ b/views/partials/card-info.handlebars
@@ -1,7 +1,7 @@
 <div>
     <section>
         <div class="card-name">
-            Name: {{name}}
+            Card Name: {{name}}
         </div>
         <div class="card-stats">
             {{#if magic}}
@@ -19,6 +19,12 @@
                 </div>
                 <div>
                     Converted Mana Cost: {{magic.0.cmcMagic}}
+                </div>
+                <div id="card-id">
+                    {{id}}
+                </div>
+                <div>
+                    <button type="button" class="delete-card-btn">Delete Card</button>
                 </div>
                 ============
             {{/if}}
@@ -43,6 +49,12 @@
                 </div>
                 <div>
                     Description: {{yugis.0.descYugi}}
+                </div>
+                <div id="card-id">
+                    {{id}}
+                </div>
+                <div>
+                    <button type="button" class="delete-card-btn">Delete Card</button>
                 </div>
                 ============
             {{/if}}
@@ -91,6 +103,12 @@
                 </div>
                 <div>
                     Retreat cost: {{pokes.0.retreatCostPoke}}
+                </div>
+                <div id="card-id">
+                    {{id}}
+                </div>
+                <div>
+                    <button type="button" class="delete-card-btn">Delete Card</button>
                 </div>
                 ============
             {{/if}}
