--- a/views/user-home.handlebars
+++ b/views/user-home.handlebars
@@ -1,6 +1,6 @@
 <div class="user-btns">
-    <button id="create-a-deck">Create A Deck</button>
-    <button id="view-deck-collection">Deck Collection</button>
+    <button id="create-btn">Create A Deck</button>
+    <button id="collection-btn">Deck Collection</button>
 </div>
 
 <section class="home-game-logos">
