--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -21,7 +21,7 @@ body {
     font-family: Helvetica, Arial, sans-serif;
 }
 
-#header {
+.header {
     background-color: var(--tertiary-color);
     border-bottom: 1px solid var(--quinary-color);
     height: auto;
@@ -37,7 +37,12 @@ body {
     width: 15%;
 }
 
-#login-signup-btn {
+.header-nav {
+    display: flex;
+    flex-direction: row;
+}
+
+.login-signup-btn {
     color: var(--quinary-color);
     background-color: var(--primary-color);
     font-size: 24px;
@@ -48,9 +53,10 @@ body {
     display: flex;
     height: auto;
     width: auto;
+    text-decoration: none;
 }
 
-#login-signup-btn:hover {
+.login-signup-btn:hover {
     background-color: var(--quinary-color);
     color: var(--quaternary-color);
 }
@@ -66,6 +72,7 @@ body {
     display: flex;
     height: auto;
     width: auto;
+    text-decoration: none;
 }
 
 #logout-btn:hover {
@@ -242,12 +249,13 @@ body {
 }
 
 #create-btn {
+    display: flex;
     font-size: 28px;
     padding: 10px 18px 10px 18px;
     border: 2px solid var(--quinary-color);
     background-color: var(--quinary-color);
     border-radius: 8px;
-    margin: 300px 0 200px 0;
+    margin: 200px 0 150px 0;
 }
 
 #create-btn:hover {
@@ -255,12 +263,13 @@ body {
 }
 
 #collection-btn {
+    display: flex;
     font-size: 28px;
     padding: 10px;
     border: 2px solid var(--quinary-color);
     background-color: var(--quinary-color);
     border-radius: 8px;
-    margin: 300px 0 200px 0;
+    margin: 200px 0 150px 0;
 }
 
 #collection-btn:hover {
@@ -338,6 +347,7 @@ body {
 
 .collection {
     display: flex;
+    flex-direction: column;
     flex-grow: 1;
     align-items: center;
     align-content: center;
@@ -357,6 +367,8 @@ body {
     box-shadow: 7px 7px 12px;
     background-color: var(--quinary-color);
     height: 150px;
+    width: 75%;
+    margin: 15px;
 }
 
 #deck-logo {
