--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,19 +9,18 @@
 
 <body>
 	<div>
-		<header>
+		<header class="header">
 			<h1>
-				<a href="/">Table Top Warriors</a>
 				<image src="/images/TTW-Header-Logo.png" alt="Table Top Warriors Logo 2" href="/">
 			</h1>
-			<nav>
+			<nav class="header-nav">
 				{{#if loggedIn}}
 				{{!-- If user is logged in display logout button --}}
-				<a href="/dashboard">Dashboard</a>
-				<a href="/" id="logout">Logout</a>
+				<a class="login-signup-btn" href="/dashboard">Dashboard</a>
+				<a href="/" id="logout-btn">Logout</a>
 				{{else}}
 				{{!-- If user is not logged in display link to login page --}}
-				<a href="/login" id="login-signup-btn">Log In / Sign Up</a>
+				<button onclick=location.href='/login' class="login-signup-btn">Log In / Sign Up</button>
 				{{/if}}
 			</nav>
 		</header>
