small edits to make add0card function work. in progress

--- a/views/deck-edit.handlebars
+++ b/views/deck-edit.handlebars
@@ -20,4 +20,5 @@
     {{!-- Card Search Box --}}
 </div>
 
+<script src="/javascript/add-card.js"></script>
 <script src="/javascript/delete-card.js"></script>
