--- a/views/partials/card-info.handlebars
+++ b/views/partials/card-info.handlebars
@@ -23,6 +23,9 @@
                 <div id="card-id">
                     {{id}}
                 </div>
+                <div id="card-deck-id">
+                    {{deck_id}}
+                </div>
                 <div>
                     <button type="button" class="delete-card-btn">Delete Card</button>
                 </div>
@@ -52,6 +55,9 @@
                 </div>
                 <div id="card-id">
                     {{id}}
+                </div>
+                <div id="card-deck-id">
+                    {{deck_id}}
                 </div>
                 <div>
                     <button type="button" class="delete-card-btn">Delete Card</button>
@@ -106,6 +112,9 @@
                 </div>
                 <div id="card-id">
                     {{id}}
+                </div>
+                <div id="card-deck-id">
+                    {{deck_id}}
                 </div>
                 <div>
                     <button type="button" class="delete-card-btn">Delete Card</button>
