--- a/views/partials/card-info.handlebars
+++ b/views/partials/card-info.handlebars
@@ -20,7 +20,7 @@
                 <div>
                     Converted Mana Cost: {{magic.0.cmcMagic}}
                 </div>
-                <div id="card-id">
+                <div id="card-id" class="hide">
                     {{id}}
                 </div>
                 <div>
@@ -50,7 +50,7 @@
                 <div>
                     Description: {{yugis.0.descYugi}}
                 </div>
-                <div id="card-id">
+                <div id="card-id" class="hide">
                     {{id}}
                 </div>
                 <div>
@@ -104,7 +104,7 @@
                 <div>
                     Retreat cost: {{pokes.0.retreatCostPoke}}
                 </div>
-                <div id="card-id">
+                <div id="card-id" class="hide">
                     {{id}}
                 </div>
                 <div>
