--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -240,6 +240,15 @@ body {
     width: 20%;
 }
 
+#cardbox {
+    display: flex;
+    flex-grow: 1;
+    align-items: center;
+    align-content: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .user-btns {
     display: flex;
     justify-content: space-evenly;
