--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -459,6 +459,7 @@ body {
     height: 28px;
     font-size: 18px;
     box-shadow: 3px 3px 3px;
+    padding: 0 4px 0 4px;
 }
 
 .edit-screen div button {
