--- a/views/deck-edit.handlebars
+++ b/views/deck-edit.handlebars
@@ -1,8 +1,11 @@
 <section class="edit-screen">
-    <div>
-        Deck Name: {{cards.0.deck.deck_name}}
-    </div>
- 
+    <form class="edit-deck-form">
+        <div>
+            <input name="deck-name" type="text" value="{{cards.0.deck.deck_name}}" /> 
+            <button type="submit">Save Deck Name</button>
+        </div>
+    </form> 
+
     <div>
         <label>Card Search:</label>
         <input name="card-name"/>
@@ -18,3 +21,4 @@
 </section>
 
 <script src="/javascript/delete-card.js"></script>
+<script src="/javascript/edit-deck.js"></script>
