ensured title logo routed to main page

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,7 +11,7 @@
 	<div>
 		<header class="header">
 			<h1>
-				<image src="/images/TTW-Header-Logo.png" alt="Table Top Warriors Logo 2" href="/">
+				<image src="/images/TTW-Header-Logo.png" alt="Table Top Warriors Logo 2" onclick=location.href='/' />
 			</h1>
 			<nav class="header-nav">
 				{{#if loggedIn}}
