removed secondary card search box in deck-edit

--- a/views/deck-edit.handlebars
+++ b/views/deck-edit.handlebars
@@ -17,12 +17,12 @@
         <h4>Type a word, phrase, or full card name and hit enter to search</h4>
     </div>
 
-    <div>
+    {{!-- <div>
         <h4>Type a word, phrase, or full card name and hit enter to search</h4>
         <label>Card Search:</label>
         <input name="card-name"/>
         <button>Enter</button>
-    </div>
+    </div> --}}
 
 
     <div>
