displays card array

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -9,7 +9,7 @@
     <button type="submit" id="home-search-btn">Search</button>
 </form>
 <div id='cardbox' class='cardbox'>
-    <img src='' id="card-pic" />
+    {{!-- <img src='' id="card-pic" /> --}}
 </div>
 <section class="home-game-logos">
     <image src="/images/Pokemon-Logo.png" alt="Pokemon Logo" id="home-pokemon" />
