--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -8,7 +8,7 @@
     </select>
     <button type="submit" id="home-search-btn">Search</button>
 </form>
-<div id='cardbox' class='cardbox'>
+<div id='cardbox'>
     {{!-- <img src='' id="card-pic" /> --}}
 </div>
 <section class="home-game-logos">
