dynamically created elements that show each card from the array of results and the information pertaitaining to each. On click of 'add card' button, the specific card you choose will be added to the db following the post route. Other smaller commits need to be made to perhaps shrink the size of this file and decrease repetitive code. It works

--- a/views/deck-edit.handlebars
+++ b/views/deck-edit.handlebars
@@ -21,6 +21,10 @@
         {{cards.0.deck.id}}
     </div>
 
+    <div class="searched-cards-container">
+        
+    </div>
+
     {{#if cards.length}}
     <h4>Your cards</h4>
     {{#each cards as |card|}}
