clears div tag with new search

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,7 @@
 <form class="home-search">
     <input type="text" placeholder="Search Card Name Here" id="search-box" name="card-name" />
     <select name="game-select" id='game-select' required>
-        <option value=""></option>
+        <option value="">Select a Game</option>
         <option value="pokemon" >Pokemon</option>
         <option value="yugi">YuGiOh!</option>
         <option value="magic">Magic: The Gathering</option>
