fixed delete deck and card

--- a/views/collection.handlebars
+++ b/views/collection.handlebars
@@ -9,18 +9,12 @@
                 {{> deck-info deck}}
             </div>
 
-            <div id="deck-id" class="hide">
-                {{deck.id}}
-            </div>
-            
             <div>
                 <button onclick=location.href="/dashboard/edit/{{deck.id}}" id="viewedit-btn">View/Edit</button>
             </div>
 
-            
-
             <div>
-                <button id="delete-deck-btn">Delete</button>
+                <button class="delete-deck-btn" id="{{deck.id}}">Delete</button>
             </div>
              
         </div>
