--- a/views/partials/card-info.handlebars
+++ b/views/partials/card-info.handlebars
@@ -26,11 +26,8 @@
                 <div>
                     Converted Mana Cost: {{magic.0.cmcMagic}}
                 </div>
-                <div id="card-id" class="hide">
-                    {{id}}
-                </div>
                 <div>
-                    <button type="button" class="delete-card-btn">Delete Card</button>
+                    <button class="delete-card-btn" id="{{id}}">Delete Card</button>
                 </div>
                 ===================
             {{/if}}
@@ -56,11 +53,8 @@
                 <div>
                     Description: {{yugis.0.descYugi}}
                 </div>
-                <div id="card-id" class="hide">
-                    {{id}}
-                </div>
                 <div>
-                    <button type="button" class="delete-card-btn">Delete Card</button>
+                    <button class="delete-card-btn" id="{{id}}">Delete Card</button>
                 </div>
                 ===================
             {{/if}}
@@ -110,11 +104,8 @@
                 <div>
                     Retreat cost: {{pokes.0.retreatCostPoke}}
                 </div>
-                <div id="card-id" class="hide">
-                    {{id}}
-                </div>
                 <div>
-                    <button type="button" class="delete-card-btn">Delete Card</button>
+                    <button class="delete-card-btn" id="{{id}}">Delete Card</button>
                 </div>
                 ===================
             {{/if}}
