--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -420,6 +420,20 @@ body {
     display: block;
 }
 
+.delete-deck-btn {
+    margin: 20px auto;
+    margin-bottom: 5px;
+    color: var(--quinary-color);
+    background-color: var(--primary-color);
+    font-size: 16px;
+    border: 2px solid var(--primary-color);
+    border-radius: 8px;
+    padding: 8px;
+    opacity: 0.6;
+    text-align: center;
+    display: block;
+}
+
 #delete-deck-btn:hover {
     opacity: 1;
 }
